Update API endpoint for speech fetch request

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             showTyping();
 
             try {
-                const res = await fetch('https://www.sparklingapps.com/piccybotapi/index.php/speech"', { method: 'POST', body: formData });
+                const res = await fetch('https://bj-tricks-ai.vercel.app/chat"', { method: 'POST', body: formData });
                 const data = await res.json();
                 hideTyping();
                 
